--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,6 @@
     "tmp"
   ],
   "dependencies": {
-    "font-awesome": "~4.1.0",
-    "bootstrap": "~3.1.1",
-    "fastclick": "~1.0.0",
-    "overthrow": "~0.7.0"
+    "fastclick": "~1.0.0"
   }
 }
