--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
     "tmp"
   ],
   "dependencies": {
-    "fastclick": "~1.0.0"
+     "font-awesome": "~4.1.0",
+"bootstrap": "~3.1.1",
+"fastclick": "~1.0.0"
   }
 }
