--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "mobile-angular-ui",
   "homepage": "https://github.com/jofomah/mobile-angular-ui",
   "authors": [
-    "mcasimir <osdevseries@gmail.com>"
+    "jofomah <osdevseries@gmail.com>"
   ],
   "description": "Mobile UI for Bootstrap 3 and Angular JS",
   "main": "dist/js/mobile-angular-ui.min.js",
@@ -27,10 +27,7 @@
     "tmp"
   ],
   "dependencies": {
-    "font-awesome": "~4.1.0",
-    "bootstrap": "~3.1.1",
-    "fastclick": "~1.0.0",
-    "overthrow": "~0.7.0"
+    "fastclick": "~1.0.0"
   },
   "version": "1.1.0-beta.29",
   "_release": "1.1.0-beta.29",
